# LungAdenocarcinoma_Raman_Diffusion_Reproduction

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  requirements.txt
code/augmented_classification/: README.md  __init__.py  data_builder.py  metrics.py  models.py  plots.py  run_augmented_classification.py
code/classification/: MLP.py  PCA_SVM.py  Random_Forest.py  SVM.py  evaluate_augmented.py
code/classification/diagnostics/: run_diagnostics.py
code/data/: prepare_data.py
code/diffusion/: PSEUDOCODE_CN.md  diffusion_process.py  generate_spectra.py  model.py  train_diffusion.py
code/evaluation/: GENERATED_QUALITY_EVALUATION_CN.md  evaluate_generated_quality.py  make_report.py
code/utils/: config.py  publication_figures.py
configs/: classification.yaml  dataset.yaml  diffusion.yaml
notebooks/: data_preprocessing_walkthrough.ipynb
tests/: test_reproduction_pipeline.py
