[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-diffusion-lung-adenocarcinoma"
version = "0.1.0"
description = "Conditional diffusion reproduction project for Raman spectra augmentation and lung adenocarcinoma classification."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["code"]
